Closed Bug 1479216 Opened 6 years ago Closed 6 years ago

Incorrectly oriented scrollbar arrows on Win 8.1

Categories

(Core :: Widget: Win32, defect)

63 Branch
x86
Windows 8.1
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox61 --- unaffected
firefox62 --- unaffected
firefox63 + verified

People

(Reporter: inejge, Assigned: emilio)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached image Wrong scrollbar arrows
63.0a1, Build 20180728101501

See attached screenshot; only the vertical scrollbar is visible, but horizontal scrollbars are also affected.
confirmed on win10 nightly63.0a1
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
[Tracking Requested - why for this release]:

Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=8e257791eccf389ed0ef642ce8d46af5f0d93b9f&tochange=ced9b3994cf4316a57e1777bb3738cc350a1196d

Suspect: 
ced9b3994cf4	Emilio Cobos Álvarez — Bug 1478391: Autogenerate StyleAppearance. r=jwatt
4b1c6659a5f5	Emilio Cobos Álvarez — Bug 1478330: Generate StyleDisplay using cbindgen. r=heycam


:emilio,
Your bunch of patch seems to cause the regression, could you look into this?
Whoops, I know why this is, thanks a lot for the report :)
Assignee: nobody → emilio
Flags: needinfo?(emilio)
The patch at bug 1478391 comment 6 changed the way the math in Scrollbarbutton* values worked, which pretty surely caused this.

Restore the original order and math to be the same as before bug 1478391.

Xidorn, Jonathan looks like not accepting review requests, mind reviewing this?

These are the relevant changes that introduced the bug:

  https://hg.mozilla.org/integration/mozilla-inbound/rev/ced9b3994cf4#l55.544
Attachment #8995753 - Flags: review?(xidorn+moz)
Attachment #8995753 - Flags: review?(xidorn+moz) → review+
Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/mozilla-inbound/rev/553a4074bc2d
Restore the order of Scrollbarbutton appearance values. r=xidorn
https://hg.mozilla.org/mozilla-central/rev/553a4074bc2d
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Alice, inejge, could you confirm that this is fixed in the latest nightly build? Thanks
Flags: needinfo?(inejge)
Flags: needinfo?(alice0775)
the issue is no longer reproduced on Win10 Nightly63.0a1 BuildId 20180731220208.
Flags: needinfo?(alice0775)
Have checked with win 10x64 and win8.1 x64.
Issue is no longer reproducible with the current Nightly build 63.0a1 (2018-07-31) .
Updating flags as well.
Status: RESOLVED → VERIFIED
Flags: needinfo?(inejge)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: